--- a/main.ipynb
+++ b/main.ipynb
@@ -2111,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2305,7 +2305,7 @@
        "2           8.0           1  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2317,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2334,7 +2334,7 @@
        "Name: num_words, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2347,29 +2347,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter out rows where cleaned_summary has less than 21 words (25 percentile)\n",
-    "cleaned_df = cleaned_df[cleaned_df['num_words'] >= 21]"
+    "# filter out rows where cleaned_summary has less than the mean number of words\n",
+    "cleaned_df = cleaned_df[cleaned_df['num_words'] >= 37]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([    0,     3,     4,     5,     7,     8,     9,    10,    11,    12,\n",
+       "Index([    0,     5,     7,     8,     9,    10,    11,    12,    14,    16,\n",
        "       ...\n",
-       "       23973, 23974, 23975, 23977, 23978, 23979, 23980, 23981, 23984, 23987],\n",
-       "      dtype='int64', length=18327)"
+       "       23960, 23961, 23964, 23965, 23967, 23969, 23973, 23974, 23978, 23980],\n",
+       "      dtype='int64', length=10817)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2380,16 +2380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RangeIndex(start=0, stop=18327, step=1)"
+       "RangeIndex(start=0, stop=10817, step=1)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2402,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2414,10 +2414,10 @@
     {
      "data": {
       "text/plain": [
-       "(18327, 39539)"
+       "(10817, 35075)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2442,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "id": "x7k_G2NAsTMx"
    },
@@ -2471,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2480,18 +2480,18 @@
      "text": [
       "title\n",
       "Two Friends                                 0\n",
-      "The Farmer's Wife                           1\n",
-      "The Yards                                   2\n",
-      "Next Friday                                 3\n",
-      "The Life and Times of Hank Greenberg        4\n",
+      "The Yards                                   1\n",
+      "Next Friday                                 2\n",
+      "The Life and Times of Hank Greenberg        3\n",
+      "My Dog Skip                                 4\n",
       "                                        ...  \n",
-      "The Final Storm                         13961\n",
-      "Blood, Sweat and Tears                  13962\n",
-      "To Be Fat Like Me                       13963\n",
-      "Pooh's Heffalump Halloween Movie        13964\n",
-      "Mom                                     13965\n",
-      "Length: 13966, dtype: int64\n",
-      "(13966,)\n"
+      "Cop and a Half: New Recruit             10812\n",
+      "TechnoCalyps                            10813\n",
+      "Phobos. Fear Kills                      10814\n",
+      "To Be Fat Like Me                       10815\n",
+      "Pooh's Heffalump Halloween Movie        10816\n",
+      "Length: 10817, dtype: int64\n",
+      "(10817,)\n"
      ]
     }
    ],
@@ -2503,38 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "title\n",
-       "Two Friends        0\n",
-       "Two Friends    11152\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "idx = indices['Two Friends']\n",
-    "idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "id": "gDSQuVh31uXW"
    },
@@ -2564,21 +2533,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "id": "uGF-fj6p1y59"
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mget_recommendations\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mTwo Friends\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcos_sim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindices\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[0;32mIn[26], line 9\u001b[0m, in \u001b[0;36mget_recommendations\u001b[0;34m(title, cosine_sim, indices)\u001b[0m\n\u001b[1;32m      6\u001b[0m sim_scores \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28menumerate\u001b[39m(cosine_sim[idx]))\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#sort the scores from highest to lowest (descending).\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m sim_scores \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msorted\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msim_scores\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreverse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Get the scores for 10 most similar movies EXCEPT FOR the 1st highest one (itself).\u001b[39;00m\n\u001b[1;32m     12\u001b[0m sim_scores \u001b[38;5;241m=\u001b[39m sim_scores[\u001b[38;5;241m1\u001b[39m:\u001b[38;5;241m11\u001b[39m]\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8627                      All About Love\n",
+      "3277                 No Strings Attached\n",
+      "3889              The Day I Was Not Born\n",
+      "6639                              Milosc\n",
+      "4864                 My Piece of the Pie\n",
+      "4014                            Dikkenek\n",
+      "3281                        Less Is More\n",
+      "480                  Take Care of My Cat\n",
+      "1022                             Nothing\n",
+      "9090    Niceland (Population. 1.000.002)\n",
+      "Name: title, dtype: object\n"
      ]
     }
    ],
